# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.547 2005/12/26 02:50:37 agaffney Exp $

*GLI-0.3 (27 Oct 2005)

  24 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/runtimedeps.py:
  initial commit
  src/GLIPortage.py:
  use separate script for GRP deps
  remove calls to portage module
  modify get_deps() to get deptree for each package and merge into final list
  remove depgraph class
  add debugging code to get_deps()
  src/GLIArchitectureTemplate.py:
  combine code for GRP/compile in install_packages() into one block
  debugging code in install_packages()

  23 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  initial commit
  move some of portage function from GLIAT
  flipped around a few function args
  src/GLIArchitectureTemplate.py:
  revamp install_packages() for new GLIPortage

  21 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  extract /usr/livecd/metadata.tar.bz2 to chroot if it exists

  20 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  wrap generated code in a class to isolate it a bit better
  302 redirects work
  don't use cgi.escape() for <% %>
  src/net/server/html/webgli/*:
  load/save profile
  src/GLIUtility.py:
  change /sbin/lspci to just lspci

  18 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  change ordering of statements in CC run() while loop to not go past the end
  of the array
  src/GLIArchitectureTemplate.py:
  removed redundant bind mounts

  18 Dec 2005; Preston Cody <codeman@gentoo.org>
  REMOVED dialogfe.py since it is totally obsolete.  use gli-dialog.py
  added a diagram by blackace from last night.
  added the glossary in RTF format.
  
  17 Dec 2005; Preston Cody <codeman@gentoo.org>
  x86AT: separated out emerge/configure from running of bootloader
  added MBR drive support to lilo.