@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.547 2005/12/26 02:50:37 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.548 2005/12/26 03:22:25 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   24 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/runtimedeps.py:
   initial commit
+  remove passing of ROOT
   src/GLIPortage.py:
   use separate script for GRP deps
   remove calls to portage module
